[package]
name = "bass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# BASS Library features
cd = ["bass-sys/basscd"]
mixer = ["bass-sys/bassmix"]
loud = ["bass-sys/bassloud"]
# FX features
fx = []
default = ["cd", "fx", "loud", "mixer"]

[dependencies]
bass-sys = { path = "crates/bass-sys", default-features = false }
bitflags = "2.5.0"
#bass-mixer-sys = { path = "../bass-mixer-sys" }
util = { path = "crates/util" }
widestring = "1.0.2"
