[package]
name = "bass"
version = "2.4.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bass-sys = { git = "https://github.com/ILikeTeaALot/bass-sys.git" }
thiserror = "1.0.64"
widestring = "1.1.0"

[features]
cd = ["bass-sys/basscd"]
loudness = ["bass-sys/bassloud"]
mixer = ["bass-sys/bassmix"]

executable_path = ["bass-sys/executable_path"]
loader_path = ["bass-sys/loader_path"]
rpath = ["bass-sys/rpath"]